--- a/LocalRepo/index.html
+++ b/LocalRepo/index.html
@@ -8,5 +8,7 @@
 <link rel="stylesheet" href="style.css">
 <body>
     <p>this is new repo</p>
+    <p>this is a new feature</p>
+    <script src="script.js"></script>
 </body>
 </html>
