--- a/LocalRepo/index.html
+++ b/LocalRepo/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style.css">
 <body>
     <p>this is new repo</p>
-    <p>this is a new feature(dropdown)</p>
+    <p>this is a new feature(button)</p>
     <script src="script.js"></script>
 </body>
 </html>
